# IPoIRC-hs

./: README.md  ipoirc.cabal
cbits/: help-linux.c  help.h
src/: Irc.hs  Main.hs  Protocol.hs  Shared.hs  Tap.hs  TunTap.hs
